Build the feature blocks component.

--- a/components/links.html
+++ b/components/links.html
@@ -1,1 +1,27 @@
 <a href="#" class="link-arrow">Learn More</a>
+
+<article class="grid grid--1x2 feature">
+  <div>
+    <span class="icon-container">
+      <svg class="icon icon--primary">
+        <use xlink:href="images/sprite.svg#wordpress"></use>
+      </svg>
+    </span>
+    <h3 class="feature__ heading">WordPress Made Easy</h3>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
+      doloremque explicabo repellat ullam possimus officia. Fuga assumenda hic
+      eveniet reprehenderit?
+    </p>
+    <a href="#" class="link-arrow">Learn More</a>
+  </div>
+  <picture>
+    <source
+      type="image/webp"
+      srcset="images/wordpress.webp 1x, images/wordpress@2x.webp 2x" />
+    <source
+      type="image/png"
+      srcset="images/wordpress.jpg 1x, images/wordpress@2x.jpg 2x" />
+    <img class="feature__image" src="images/wordpress@2x.jpg" alt=""
+  /></picture>
+</article>
