--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -17,6 +17,11 @@
 
 /* Topography */
 
+::selection {
+  background: var(--color-primary);
+  color: white;
+}
+
 html {
   font-size: 62.5%;
 }
@@ -129,7 +134,6 @@ a {
 .list {
   list-style: none;
   padding-left: 0;
-  color: var(--color-headings);
 }
 
 .list--inline .list__item {
@@ -140,6 +144,7 @@ a {
 .list--tick {
   list-style-image: url(../images/tick.svg);
   padding-left: 3rem;
+  color: var(--color-headings);
 }
 
 .list--tick .list__item {
@@ -407,6 +412,7 @@ a {
 
 .media {
   display: flex;
+  margin-bottom: 4rem;
 }
 
 .media__title {
@@ -611,12 +617,12 @@ a {
 
 .block--skewed-right {
   padding-bottom: calc(var(--padding-vertical) + 4rem);
-  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 80%);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 90%);
 }
 
 .block--skewed-left {
   padding-bottom: calc(var(--padding-vertical) + 4rem);
-  clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 0% 100%);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
 }
 
 .container {
@@ -687,10 +693,6 @@ a {
 }
 
 /* Hero */
-.hero {
-  clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
-}
-
 .hero__tagline {
   font-size: 2rem;
   color: #b9c3cf;
@@ -772,5 +774,35 @@ a {
 @media screen and (min-width: 768px) {
   .feature:nth-of-type(even) .feature__content {
     order: 2;
+  }
+}
+
+/* Showcase block */
+
+.showcase__heading {
+  text-align: center;
+  margin-bottom: 4rem;
+}
+
+.showcase__image > img {
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .showcase__heading {
+    margin-bottom: 6rem;
+  }
+
+  .showcase .grid {
+    grid-template-columns: 50% 50%;
+  }
+
+  .showcase__image {
+    justify-self: end;
+  }
+
+  .showcase__image > img {
+    width: auto;
+    max-width: 700px;
   }
 }
