--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -491,7 +491,8 @@ a {
 
 /* Testimonials */
 .testimonial {
-  padding: 3rem;
+  padding: 2rem;
+  margin: 4rem;
 }
 .testimonial__image > img {
   width: 100%;
@@ -499,12 +500,13 @@ a {
 
 .testimonial__image {
   position: relative;
+  padding: 0 4rem;
 }
 
 .testimonial__image > .icon-container {
   position: absolute;
   top: 3rem;
-  right: -32px;
+  right: 8px;
 }
 
 @media screen and (min-width: 768px) {
