--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -201,7 +201,7 @@ a {
   font-weight: 600;
   margin: 1rem 0;
   outline: 0;
-  padding: 2rem 3rem;
+  padding: 2rem 4vw;
   text-align: center;
   text-transform: uppercase;
   white-space: nowrap;
@@ -290,6 +290,7 @@ a {
   border: 0;
   flex-grow: 1;
   padding: 1.5rem 2rem;
+  width: 0;
 }
 
 .input-group .btn {
@@ -433,6 +434,7 @@ a {
   font-style: italic;
   color: var(--color-body-darker);
   line-height: 1.3;
+  margin: 2rem;
 }
 .quote__text::before {
   content: open-quote;
@@ -492,7 +494,8 @@ a {
 /* Testimonials */
 .testimonial {
   padding: 2rem;
-  margin: 4rem;
+  margin: 4vw;
+  overflow: visible;
 }
 .testimonial__image > img {
   width: 100%;
@@ -500,13 +503,14 @@ a {
 
 .testimonial__image {
   position: relative;
-  padding: 0 4rem;
+  padding: 0 2rem;
+  overflow: visible;
 }
 
 .testimonial__image > .icon-container {
   position: absolute;
   top: 3rem;
-  right: 8px;
+  right: -8px;
 }
 
 @media screen and (min-width: 768px) {
@@ -729,8 +733,9 @@ a {
 }
 
 .block-domain__prices {
+  color: var(--color-headings);
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 6rem);
   font-size: 2rem;
   font-weight: 600;
