--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -16,7 +16,6 @@
 }
 
 /* Topography */
-
 ::selection {
   background: var(--color-primary);
   color: white;
@@ -26,12 +25,17 @@ html {
   font-size: 62.5%;
 }
 
+img {
+  width: 100%;
+}
+
 body {
   font-family: Inter, Arial, Helvetica, sans-serif;
   color: var(--color-body);
-  font-size: 2.4rem;
+  font-size: 2rem;
   line-height: 1.5;
 }
+
 h1,
 h2,
 h3 {
@@ -41,7 +45,7 @@ h3 {
 }
 
 h1 {
-  font-size: 7rem;
+  font-size: 6rem;
 }
 
 h2 {
@@ -49,7 +53,9 @@ h2 {
 }
 
 h3 {
-  font-size: 3rem;
+  font-size: 2.8rem;
+  font-weight: 600;
+  line-height: 1.3;
 }
 
 p {
@@ -60,16 +66,21 @@ p {
   body {
     font-size: 1.8rem;
   }
+
   h1 {
     font-size: 8rem;
   }
+
+  h2 {
+    font-size: 4rem;
+  }
+
   h3 {
     font-size: 2.4rem;
   }
 }
 
 /* Links */
-
 a {
   text-decoration: none;
 }
@@ -98,7 +109,6 @@ a {
 }
 
 /* Bagdes */
-
 .badge {
   border-radius: 20px;
   font-size: 2rem;
@@ -312,7 +322,7 @@ a {
 
 .card__header,
 .card__body {
-  padding: 2rem 3.5rem;
+  padding: 2rem 7%;
 }
 
 .card--primary .card__header {
@@ -367,10 +377,6 @@ a {
   margin-bottom: 2rem;
 }
 
-.plan--popular {
-  transform: scale(1.1);
-}
-
 .plan--popular .card__header {
   position: relative;
 }
@@ -392,6 +398,10 @@ a {
 }
 
 @media screen and (min-width: 1024px) {
+  .plan--popular {
+    transform: scale(1.1);
+  }
+
   .plan__name {
     font-size: 1.4rem;
   }
@@ -421,7 +431,7 @@ a {
 }
 
 .media__body {
-  padding: 0 2rem;
+  margin: 0 2rem;
 }
 
 .media__image {
@@ -434,7 +444,6 @@ a {
   font-style: italic;
   color: var(--color-body-darker);
   line-height: 1.3;
-  margin: 2rem;
 }
 .quote__text::before {
   content: open-quote;
@@ -445,19 +454,20 @@ a {
 }
 
 .quote__author {
-  font-weight: 600;
+  font-size: 2rem;
+  font-weight: 500;
   font-style: normal;
   margin-bottom: 0;
 }
 
 .quote__icon {
   position: relative;
-  bottom: 10px;
+  bottom: 16px;
 }
 .quote__organization {
-  font-size: 2rem;
-  font-style: normal;
   color: var(--color-headings);
+  font-size: 1.5rem;
+  font-style: normal;
   opacity: 0.4;
 }
 
@@ -493,33 +503,34 @@ a {
 
 /* Testimonials */
 .testimonial {
-  padding: 2rem;
-  margin: 4vw;
-  overflow: visible;
+  padding: 3rem;
 }
-.testimonial__image > img {
-  width: 100%;
+
+.testimonial .quote {
+  font-size: 110%;
+  margin: 2rem 0;
 }
 
 .testimonial__image {
   position: relative;
-  padding: 0 2rem;
-  overflow: visible;
+  margin: 0 3rem;
 }
 
 .testimonial__image > .icon-container {
   position: absolute;
   top: 3rem;
-  right: -8px;
+  right: -32px;
 }
 
 @media screen and (min-width: 768px) {
-  .testimonial .quote__text,
-  .testimonial .quote__author {
-    font-size: 2.4rem;
+  .testimonial__image {
+    margin: 0;
   }
+
   .testimonial .quote {
-    margin-left: 6rem;
+    margin: 5rem 0 0 6rem;
+    font-size: 120%;
+    line-height: 1.5;
   }
 }
 
@@ -598,14 +609,14 @@ a {
 }
 
 /* Blocks */
-
 .block {
-  --padding-vertical: 6rem;
+  --padding-vertical: 5rem;
   padding: var(--padding-vertical) 2rem;
 }
 
 .block__header {
   text-align: center;
+  margin-bottom: 4rem;
 }
 
 .block__heading {
@@ -625,12 +636,12 @@ a {
 
 .block--skewed-right {
   padding-bottom: calc(var(--padding-vertical) + 4rem);
-  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 90%);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 95%);
 }
 
 .block--skewed-left {
   padding-bottom: calc(var(--padding-vertical) + 4rem);
-  clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 95%, 0% 100%);
 }
 
 .container {
@@ -765,7 +776,7 @@ a {
 
 .feature {
   gap: 4rem 2rem;
-  margin: 12rem 0;
+  margin: 6rem 0;
 }
 
 .feature__ heading {
@@ -787,16 +798,6 @@ a {
 }
 
 /* Showcase block */
-
-.showcase__heading {
-  text-align: center;
-  margin-bottom: 4rem;
-}
-
-.showcase__image > img {
-  width: 100%;
-}
-
 @media screen and (min-width: 768px) {
   .showcase__heading {
     margin-bottom: 6rem;
@@ -823,7 +824,6 @@ a {
 
 .footer a {
   color: #777;
-  font-size: 1.8rem;
   transition: color 0.3s;
 }
 
@@ -841,7 +841,9 @@ a {
 }
 
 .footer__heading {
+  font-size: 2.5rem;
   font-weight: 600;
+  line-height: 1.5;
   text-transform: uppercase;
 }
 
@@ -851,7 +853,6 @@ a {
 }
 
 .footer__brand img {
-  width: 100%;
   max-width: 230px;
 }
 
@@ -862,6 +863,11 @@ a {
 }
 
 @media screen and (min-width: 768px) {
+  .footer {
+    font-size: 1.5rem;
+    padding-top: 10rem;
+  }
+
   .footer__sections {
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
   }
@@ -890,4 +896,9 @@ a {
   .footer__heading {
     font-size: 1.6rem;
   }
+}
+
+/* Callout */
+.callout {
+  transform: translateY(5rem);
 }
